<resources>
    <string name="app_name">CapsShop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="productos">Productos</string>
    <string name="descuentos">Descuentos</string>
    <string name="login">Iniciar sesion</string>
    <string name="login_with_google">Iniciar sesion con Google</string>
    <string name="login_with_facebook">Iniciar sesion con facebook</string>
    <string name="email">Usuario o email</string>
    <string name="input_user">Ingresa un usuario</string>
    <string name="password">Contraseña</string>
    <string name="sign_up">Registrarse</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="log_in">Iniciar sesion</string>
    <string name="name">Nombre(s)</string>
    <string name="input_name">Ingrese su nombre</string>
    <string name="input_lastname">Ingrese apellido(s)</string>
    <string name="lastname">Apellido(s)</string>
    <string name="date">DD/MM/YYYY</string>
    <string name="calendar">Calendario</string>
    <string name="user">Nombre de usuario</string>
    <string name="correo">Correo electronico</string>
    <string name="input_email">Ingresa tu correo electronico</string>
    <string name="input_password">Ingresa una contraseña</string>
    <string name="cpassword">Confirmar contraseña</string>
    <string name="nba">NBA</string>
    <string name="nfl">NFL</string>
    <string name="description_img_carousel">Plantilla de ImageView para carousel</string>
    <string name="example_product">Producto</string>
    <string name="example_price">$100.00</string>
    <string name="cantidad">Cantidad :</string>
    <string name="one">1</string>
    <string name="buy">Comprar</string>
    <string name="add_shopping_car">Agregar al carrito</string>
    <string name="description">Descripcion</string>
    <string name="example_category">CAT</string>
    <string name="envio_gratis">Envio gratis</string>
    <string name="finish_buy">Continuar compra</string>
    <string name="total_pay">Total a pagar:</string>
    <string name="delete">Eliminar</string>
    <string name="example_user">User</string>
    <string name="menu_product">Producto</string>
    <string name="rebajas">Rebajas</string>
    <string name="descubre_precios">¡Descubre precios increibles todos los dias!</string>
    <string name="menu_sales">Rebajas</string>
    <string name="example_before_price">$999.00</string>
    <string name="example_after_price">$699.70</string>
    <string name="discount_rate">%30</string>
    <string name="menu_shopping_car">Carrito de compras</string>
    <string name="shopping_car">Carrito de compras</string>
    <string name="select_product">Producto Seleccionado</string>
    <string name="example_amount">1</string>
    <string name="total">Total:</string>
    <string name="direccion">Direccion de entrega</string>
    <string name="codigo_postal">Codigo postal</string>
    <string name="example_cp">Ej.: 38900</string>
    <string name="calle_numero">Calle y numero</string>
    <string name="example_street">Ej.: Calle Numero</string>
    <string name="colonia">Colonia</string>
    <string name="example_colonia">Ej.: Colonia …</string>
    <string name="number">Telefono</string>
    <string name="pay">Pago</string>
    <string name="checkout_completed_succesfull">¡Compra realizada con exito!</string>
    <string name="label_checkout_completed">Compra Finalizada</string>
    <string name="label_login">Inicio de sesion</string>
    <string name="label_signup">Registro</string>
    <string name="mbl">MBL</string>
    <string name="example_products">Productos</string>
    <string name="go_home">Ir a inicio</string>
    <string name="capsshop">Caps Shop´s</string>
    <string name="validation_password">Que tenga 8 o mas caracteres, con una combinacion que contenga minimo una letra mayuscula y una minuscula, un numero y un caracter especial </string>
    <string name="example_price_before">$99.00</string>
</resources>