<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.itess.capsshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_shopping_car"
            app:destination="@id/nav_shopping_car" />
        <action
            android:id="@+id/action_nav_home_to_nav_select_product"
            app:destination="@id/nav_select_product">
            <argument
                android:name="id"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_product"
        android:name="com.itess.capsshop.ui.product.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" >
        <action
            android:id="@+id/action_nav_product_to_nav_shopping_car"
            app:destination="@id/nav_shopping_car" />
        <action
            android:id="@+id/action_nav_product_to_nav_select_product"
            app:destination="@id/nav_select_product">
            <argument
                android:name="id"
                app:argType="integer" />
        </action>

    </fragment>

    <fragment
        android:id="@+id/nav_sales"
        android:name="com.itess.capsshop.ui.sales.SalesFragment"
        android:label="@string/menu_sales"
        tools:layout="@layout/fragment_sales" >
        <action
            android:id="@+id/action_nav_sales_to_nav_shopping_car"
            app:destination="@id/nav_shopping_car" />
        <action
            android:id="@+id/action_nav_sales_to_nav_select_product"
            app:destination="@id/nav_select_product">
            <argument
                android:name="id"
                app:argType="integer" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/nav_shopping_car"
        android:name="com.itess.capsshop.ui.shoppingcar.ShoppingCarFragment"
        android:label="@string/menu_shopping_car"
        tools:layout="@layout/fragment_shopping_car">
        <action
            android:id="@+id/action_nav_shopping_car_to_nav_pay"
            app:destination="@id/nav_pay">
        </action>
        <action
            android:id="@+id/action_nav_shopping_car_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

    <fragment
        android:id="@+id/nav_select_product"
        android:name="com.itess.capsshop.ui.selectproduct.SelectProductFragment"
        android:label="@string/select_product"
        tools:layout="@layout/fragment_select_product">
        <argument
            android:name="id"
            app:argType="integer"
            android:defaultValue="0"/>
        <action
            android:id="@+id/action_nav_select_product_to_nav_shopping_car"
            app:destination="@id/nav_shopping_car" />
        <action
            android:id="@+id/action_nav_select_product_to_nav_pay"
            app:destination="@id/nav_pay" />
    </fragment>

    <fragment
        android:id="@+id/nav_pay"
        android:name="com.itess.capsshop.ui.pay.PayFragment"
        android:label="@string/pay"
        tools:layout="@layout/fragment_pay">
        <action
            android:id="@+id/action_nav_pay_to_nav_checkeout_completed"
            app:destination="@id/nav_checkeout_completed" />
    </fragment>

    <fragment
        android:id="@+id/nav_checkeout_completed"
        android:name="com.itess.capsshop.ui.checkoutcompleted.CheckoutCompletedFragment"
        android:label="@string/label_checkout_completed"
        tools:layout="@layout/fragment_checkout_completed"/>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.itess.capsshop.ui.login.LogInFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_signup"
            app:destination="@id/nav_signup" />
        <action
            android:id="@+id/action_nav_login_to_nav_pay"
            app:destination="@id/nav_pay" />
    </fragment>

    <fragment
        android:id="@+id/nav_signup"
        android:name="com.itess.capsshop.ui.signup.SignUpFragment"
        android:label="@string/label_signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_nav_signup_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>

</navigation>